--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "google-map-react": "^1.1.5",
+    "i18next": "^19.0.1",
+    "i18next-browser-languagedetector": "^4.0.1",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-i18next": "^11.2.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
