--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-hook-form": "^3.29.4",
     "react-i18next": "^11.2.5",
     "react-redux": "^7.1.3",
     "react-redux-firebase": "^3.0.5",
