--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "google-map-react": "^1.1.7",
     "i18next": "^19.3.4",
     "i18next-browser-languagedetector": "^4.0.2",
-    "node-sass": "^4.13.0",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.12.0",
+    "node-sass": "^4.13.1",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0",
+    "react-dom": "^16.13.1",
     "react-hook-form": "^3.29.4",
-    "react-i18next": "^11.2.5",
-    "react-redux": "^7.1.3",
-    "react-redux-firebase": "^3.0.5",
+    "react-i18next": "^11.3.4",
+    "react-redux": "^7.2.0",
+    "react-redux-firebase": "^3.3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "redux": "^4.0.4"
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
