--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "i18next": "^19.3.4",
     "i18next-browser-languagedetector": "^4.0.2",
     "node-sass": "^4.14.1",
-    "react": "^16.13.1",
+    "react": "^17.0.2",
     "react-bootstrap": "^1.0.0",
-    "react-dom": "^16.13.1",
-    "react-hook-form": "^3.29.4",
+    "react-dom": "^17.0.0",
+    "react-hook-form": "^7.18.1",
     "react-i18next": "^11.3.4",
     "react-redux": "^7.2.0",
     "react-redux-firebase": "^3.3.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^4.0.0",
     "redux": "^4.0.5"
   },
   "scripts": {
