--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "dependencies": {
     "@react-firebase/database": "^0.3.11",
     "bootstrap": "^4.4.1",
-    "firebase": "^7.13.1",
+    "firebase": "^7.24.0",
     "google-map-react": "^1.1.7",
     "i18next": "^19.3.4",
     "i18next-browser-languagedetector": "^4.0.2",
-    "node-sass": "^4.14.1",
+    "next": "latest",
+    "sass": "^1.34.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^17.0.0",
@@ -19,17 +20,13 @@
     "react-redux-firebase": "^3.3.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "postbuild": "rimraf build/**/*.map",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "browserslist": {
     "production": [
