--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "private": true,
   "dependencies": {
     "@react-firebase/database": "^0.3.11",
-    "bootstrap": "^4.4.1",
-    "firebase": "^7.24.0",
-    "google-map-react": "^1.1.7",
+    "bootstrap": "^5.2.3",
+    "firebase": "^9.22.0",
+    "google-map-react": "^2.2.1",
     "i18next": "^19.3.4",
     "i18next-browser-languagedetector": "^4.0.2",
-    "next": "latest",
-    "sass": "^1.34.0",
-    "react": "^17.0.2",
-    "react-bootstrap": "^1.0.0",
-    "react-dom": "^17.0.0",
-    "react-hook-form": "^7.18.1",
+    "next": "^13.4.3",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-i18next": "^11.3.4",
-    "react-redux": "^7.2.0",
-    "react-redux-firebase": "^3.3.0",
+    "react-redux": "^8.0.5",
+    "react-redux-firebase": "^3.11.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.0",
     "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.9"
+    "redux-devtools-extension": "^2.13.9",
+    "sass": "^1.62.1"
   },
   "scripts": {
     "dev": "next dev",
@@ -39,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass-loader": "^13.3.0"
   }
 }
