--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-firebase/database": "^0.3.11",
+    "@firebase/database": "^0.14.4",
     "bootstrap": "^5.2.3",
     "firebase": "^9.22.0",
     "google-map-react": "^2.2.1",
     "i18next": "^19.3.4",
     "i18next-browser-languagedetector": "^4.0.2",
+    "mongodb": "^5.5.0",
     "next": "^13.4.3",
+    "next-connect": "^1.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
